--- a/frontend/publico/información_estatica.html
+++ b/frontend/publico/información_estatica.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="/redaccion">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/pagina-intermedia">Administrar</a>
+                        <a class="nav-link" href="/admin">Administrar</a>
                     </li>
                 </ul>
             </div>
