--- a/frontend/publico/inicio.html
+++ b/frontend/publico/inicio.html
@@ -49,7 +49,7 @@
                         <a class="nav-link" href="/redaccion">Escribe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/pagina-intermedia">Administrar</a>
+                        <a class="nav-link" href="/admin">Administrar</a>
                     </li>
                 </ul>
             </div>
